<resources>
    <string name="app_name">Nayaganj</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">All Offers</string>
    <string name="title_mycart">MyCart</string>
    <string name="open_string">Open Drawer</string>
    <string name="close_string">Close Drawer</string>
    <string name="home">Home</string>
    <string name="api_key">AIzaSyDfIa5Kw9H2eES-BTnYjSTgJiV54l6sDUU</string>
    <string name="my_account">My Account</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="my_orders">My Orders</string>
    <string name="my_virtual_order">My Virtual Order</string>
    <string name="all_offers">All Offers</string>
    <string name="share_app">Share App</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="customer_support">Customer Support</string>
    <string name="about_us">About Us</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="logout">Logout</string>
    <string name="net_wt">Net Wt:</string>
    <string name="Rs">\u20B9</string>
    <string name="free_delivery_on_order">Free Delivery on order:</string>
    <string name="saved_amount">SAVED \u20B9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Congratulation</string>
    <string name="order_placed">Your order placed successfully.</string>
    <string name="check_your_order">Check Your Order</string>
    <string name="empty_cart_message">Enjoy and continue shopping\nwith <b><font fgcolor="red">NAYA GANJ!</font></b> </string>
    <string name="otp_verification">OTP Verification</string>
    <string name="user_name">Nayaganj User</string>
    <string name="about_us_text">NayaGanj is India’s online spices and grocery store. Choose from a wide range of options in every category, exclusively handpicked to help you find the best quality available at the lowest prices. Select a time slot for delivery and your order will be delivered right to your doorstep, anywhere in Kanpur, Lucknow, and Varanasi You can pay online using your debit/credit card or by cash on delivery. We guarantee on-time delivery and the best quality.</string>
    <string name="support_mail">nayaganj9@gmail.com</string>
    <string name="be_a_retailer">Be a Retailer</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_address">My Address</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="make_order_by_taking_image_or_voice">Make Order by Taking Image or Voice</string>
    <string name="stop_amp_play"><![CDATA[Stop & play]]></string>
    <string name="check_internet">Please check your connection status\nand try again!</string>
    <string name="payment_received">Payment Received:</string>
    <string name="refunded_amount">Refunded amount:</string>
    <string name="server_error_message">We will resolve issue soon,\nPlease keep  patience.</string>
    <string name="collect_order">Collect Order</string>
    <string name="dispatch_order">Dispatch Order</string>
    <string name="deliver_order">Deliver Order</string>
    <string name="return_products">Return Product</string>
    <string name="a_4_ground_floor_mohan_co_operative_industrial_new_delhi">A-4, Ground Floor, Mohan Co-Operative Industrial,New Delhi.</string>
    <string name="deliver_now">Deliver Now</string>
    <string name="enable_gps">Enable Gps</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="personal_details">Personal Details</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="address_detail">Address Detail</string>
    <string name="house_no">House No.</string>
    <string name="street_details">Street Details</string>
    <string name="enter_city">Select city</string>
    <string name="pin_code">Pin Code</string>
    <string name="select_address_type">Select Address Type</string>
    <string name="area_details">Area Details</string>
    <string name="nayaganj_h">नयागंज</string>
    <string name="home_h">होम</string>
    <string name="myorders_h">मेरा ऑर्डर्स</string>
    <string name="logout_h">लॉगआउट</string>
    <string name="share_h">शेयर ऐप्प</string>
    <string name="csupport_h">कस्टमर सपोर्ट </string>
    <string name="my_wallet_h">मेरा वॉलेट</string>
    <string name="about_us_h">अबाउट अस</string>
    <string name="refer_and_earn_h">रेफेर एंड यॉर्न </string>
    <string name="my_addresses_h">मेरा अदड्रेस्सेस</string>
    <string name="search_here_h">यंहा 100+ सामन खोज करें</string>
    <string name="search_h">सर्चं</string>
    <string name="my_virtual_order_hindi">मेरा वर्चुअल ऑर्डर्स </string>
    <string name="record_order_h"> रिकॉर्ड ऑर्डर </string>
    <string name="name_h">नाम:</string>
    <string name="email_h">ईमेल:</string>
    <string name="mobile_number_h">मोबाइल नंबर:</string>
    <string name="selected_lan_h">चयनित भाषा:</string>
    <string name="order_details_h">ऑर्डर डिटेल्स </string>
    <string name="my_address_h">मेरा एड्रेस</string>
    <string name="add_h">जोड़ें</string>
    <string name="net_weight_h">नेट वेट:</string>
    <string name="product_details_h">प्रोडक्ट डिटेल्स</string>
    <string name="product_list_h">प्रोडक्ट लिस्ट</string>
    <string name="my_cart_h">मेरा कार्ट</string>
    <string name="delivery_address_h">डिलीवरी एड्रेस </string>
    <string name="change_h">चेंज</string>
    <string name="payment_options_h">पेमेंट ऑप्शन्स </string>
    <string name="add_new_address_h"> एक नया एड्रेस जोड़े </string>
    <string name="re_order_h">री-आर्डर </string>
    <string name="empty_cart_h">आपका कार्ट खाली हैं !</string>
    <string name="add_new_address_h2"> ऐड न्यू एड्रेस</string>
    <string name="cancel_order_h">कैंसल ऑर्डर </string>
    <string name="add_item_now_h">अभी आइटम ऐड करें</string>
    <string name="off_h">ऑफ</string>
    <string name="start_shopping_h">शॉपिंग शुरू करें </string>
    <string name="sorry_order_not_available_h">क्षमा करें,ऑर्डर्स उपलब्ध नहीं हैं!</string>
    <string name="select_language_h">भाषा का चयन करें</string>
    <string name="saved_h">बचाया</string>
    <string name="you_saved_h">आपने बचाया: ₹</string>
    <string name="record_h">रिकॉर्ड</string>
    <string name="stop_h">स्टॉप</string>
    <string name="play_h">प्ले</string>
    <string name="place_order_h">ऑर्डर करें </string>
    <string name="delivery_address_not_added">अभी तक कोई डिलीवरी एड्रेस ऐड नहीं हैं </string>
    <string name="shop_now_h">शॉपिंग करें </string>
    <string name="balance_h">राशि </string>
    <string name="your_referral_money">आपका रेफ़रल राशि </string>
    <string name="share_link_h">शेयर लिंक</string>
    <string name="refer_and_earnupto_h">अभी रेफेर करें  &amp; ₹100 तक पायें  </string>
    <string name="share_referral_link_h">रेफ़रल लिंक शेयर करें दोस्तों  के साथ via SMS/Email/WhatsApp etc </string>
    <string name="update_mobile_number_h">अपडेट मोबाइल नंबर</string>
    <string name="update_name_h">अपडेट नाम</string>
    <string name="upadte_eamil_h">अपडेट ईमेल</string>
    <string name="update_h">अपडेट</string>
    <string name="send_otp_h">OTP दोबारा भेजें </string>
    <string name="time_remaining_h">टाइम बचा हैं</string>
    <string name="update_profile_h">अपडेट प्रोफाइल  </string>
    <string name="logout_text_h">क्या सचमुच ,आप लॉगआउट करना चाहते है ?</string>
    <string name="yes_h">हां</string>
    <string name="no_h">नहीं</string>
    <string name="personal_details_h">पर्सनल डिटेल्स </string>
    <string name="address_details_h">एड्रेस डिटेल्स </string>
    <string name="address_list_h">एड्रेस लिस्ट </string>
    <string name="total_amount_h1">कुल राशि:</string>
    <string name="total_amount_h">कुल राशि:</string>
    <string name="cart_amount_h">कार्ट राशि:</string>
    <string name="delivery_charge_h">डिलीवरी राशि: </string>
    <string name="total_amount_cart_h">कुल राशि:</string>
    <string name="items_h">आइटम्स</string>
    <string name="checkout_h">चेकआउट </string>
    <string name="enter_first_name_h">पहला नाम लिखें </string>
    <string name="enter_last_name_h">अंतिम नाम लिखें </string>
    <string name="house_no_h">*घर नंबर </string>
    <string name="apart_name_h">*अपर्टमेंट नाम </string>
    <string name="contact_number_h">*मोबाइल नंबर </string>
    <string name="street_details_h">गली का डिटेल्स जंहा पे आप रहते हैं </string>
    <string name="area_details_h">एरिया डिटेल्स</string>
    <string name="pincode_h">*पिनकोड </string>
    <string name="city_h">शहर</string>
    <string name="choose_nickname_h">निक नाम चुनें  इस एड्रेस के लिये </string>
    <string name="add_address_h">एड्रेस जोड़ें</string>
    <string name="update_address_h">अपडेट एड्रेस</string>
    <string name="view_cart_h">कार्ट देखें</string>
    <string name="make_order_text_h">फोटो खिचकें या आवाज़  से ऑर्डर करें </string>
    <string name="take_image_h">फोटो खींचे</string>
    <string name="cancel_h">रद्द करें </string>
    <string name="select_address_h">एड्रेस चुनें </string>
    <string name="select_address_type_h">एड्रेस टाइप चुनें </string>
    <string name="be_a_retailer_h">रिटेलर बने </string>
    <string name="retailer_registration_form_h">रिटेलर रजिस्ट्रेशन फॉर्म </string>
    <string name="available_coupons_h">अवेलेबल  कूपन्स </string>
    <string name="offers_h">ऑफर्स </string>
    <string name="change_language_h">भाषा बदलें </string>
    <string name="mobile_number_login">मोबाइल नंबर </string>
    <string name="login_signup_h">लॉग इन / साइन अप</string>
    <string name="login_signuph">लॉग इन/साइन अप</string>
    <string name="verfiy_otp_h">OTP जांच </string>
    <string name="name_h1">नाम</string>
    <string name="email_h1">ईमेल</string>
    <string name="reg_almost_done_h">रजिस्ट्रेशन लगभग आपने कर लिया</string>
    <string name="next_h">आगे </string>
    <string name="company_name_h">*कंपनी नाम </string>
    <string name="director_number_h">*डायरेक्टर नंबर </string>
    <string name="gst_number_h">*GST नंबर</string>
    <string name="pan_card_number_h">*पैन कार्ड नंबर </string>
    <string name="tin_number_h">*TIN नंबर</string>
    <string name="edit_number_h">नंबर बदलें</string>
    <string name="verifyOtp">OTP जांच करें </string>
    <string name="about_us_text_h">NayaGanj भारत का ऑनलाइन मसाला और किराना स्टोर है। प्रत्येक श्रेणी में विकल्पों की एक विस्तृत श्रृंखला में से चुनें, विशेष रूप से सबसे कम कीमतों पर उपलब्ध सर्वोत्तम गुणवत्ता खोजने में आपकी सहायता के लिए चुना गया है। डिलीवरी के लिए एक समय स्लॉट चुनें और आपका ऑर्डर कानपुर, लखनऊ और वाराणसी में कहीं भी आपके दरवाजे पर पहुंचा दिया जाएगा आप अपने डेबिट/क्रेडिट कार्ड का उपयोग करके या डिलीवरी पर नकद द्वारा ऑनलाइन भुगतान कर सकते हैं। हम समय पर डिलीवरी और सर्वोत्तम गुणवत्ता की गारंटी देते हैं।</string>
    <string name="my_account_h">मेरा अकाउंट</string>
    <string name="all_offers_h">आल ऑफर</string>
    <string name="category_h">केटेगरी देखें</string>
    <string name="shopby_category_h">केटेगरी से ख़रीदे</string>
    <string name="privacy_policy_h">प्राइवेसी पालिसी</string>
    <string name="apply">APPLY</string>
    <string name="default_notification_channel_id">NayaGanj Latest Notification</string>
    <string name="notification_channel_name">Nayaganj Latest channel</string>
    <string name="mid">LTukSZ52182040597318</string>
    <string name="transactions_failed">Transaction failed</string>
    <string name="exit_press_back_twice_message">Press again to exit</string>
    <string name="share_link">Share Link</string>
    <string name="send_referral_link_via">" Send a referral link to your friends via SMS/Email/WhatsApp etc"</string>
    <string name="refer_earn_upto"><![CDATA["Refer now &amp; earn upto ₹ 100 "]]></string>
    <string name="referral_money">Your Referral Money</string>
</resources>