<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/my_order"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_mycart"
        android:icon="@drawable/cart_icon"
        android:title="@string/title_mycart" />

</menu>