<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/placed_order_icon"
        android:layout_width="@dimen/_58sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/success_order_icon">

    </ImageView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/congratulation"
        android:textColor="@color/red_color"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/order_placed"
        android:textSize="@dimen/_14sdp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"

        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/check_your_order"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:rippleColor="@color/red_color">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>
