<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/cst_toolbar"
        layout="@layout/custom_toolbar" />


    <ImageView
        android:id="@+id/refer_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/cst_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/empty_stock">

    </ImageView>


    <LinearLayout
        android:id="@+id/referral_money"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/refer_image"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/a_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/referral_money"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_12sdp">

            </TextView>

            <TextView
                android:id="@+id/wallet_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a_text"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="₹ 0"
                android:textColor="@color/red_color"
                android:textSize="@dimen/_20sdp">

            </TextView>

        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/referral_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/referral_money"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:text="@string/refer_earn_upto"
        android:textSize="@dimen/_14sdp" />


    <TextView
        android:id="@+id/referral_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/referral_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/send_referral_link_via"
        android:textSize="@dimen/_12sdp" />


    <TextView
        android:id="@+id/share_link"
        android:layout_width="150dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@color/red"
        android:gravity="center"
        android:paddingBottom="@dimen/_2sdp"
        android:text="@string/share_link"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

</RelativeLayout>