<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="naya.ganj.app.data.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_main_to_mycart"
            app:destination="@id/navigation_mycart"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_mycart"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="naya.ganj.app.data.category.view.CategoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@id/productListFragment"
            app:destination="@id/productListFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="naya.ganj.app.data.offer.view.AllOfferFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mycart"
        android:name="naya.ganj.app.data.mycart.view.MyCartFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_mycart_layout">
        <argument
            android:name="order_id"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_mycart_to_navigation_home2"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/productListFragment"
        android:name="naya.ganj.app.data.category.view.ProductListFragment"
        android:label="ProductListFragment">
    </fragment>
</navigation>